Refactor and optimize various classes in the CreateNuclear mod
- Added @SuppressWarnings and @ParametersAreNonnullByDefault annotations to several classes for better code clarity.
- Renamed variables for consistency and clarity in ClothItem and ReactorBluePrintItem.
- Simplified conditional checks in CNFanProcessingTypes and ReactorControllerBlock.
- Removed unused ReactorOption enum and cleaned up ReactorCasingEntity.
- Improved overlay rendering logic in CNClientEvent and added new IrradiatedOverlayRendererVision class.
- Commented out unused RadiationOverlay in HudRenderer.
- Enhanced readability by reducing nested conditions and using early returns where applicable.